bugfix: remove scroll snap align rule

--- a/main.css
+++ b/main.css
@@ -604,7 +604,6 @@ header {
       white-space: nowrap;
       flex-shrink: 0;
       scroll-snap-type: mandatory;
-      scroll-snap-align: center; 
       scrollbar-width: none;    
 }
 
